--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GITHUB Pages test</title>
+    <title>Document</title>
+    <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
 </head>
 <body>
-    Hello World
+    <a-scene>
+        <!-- <a-assets>
+            <a-asset-item id="Airport" src="Airport_01.gltf"></a-asset-item>
+        </a-assets> -->
+        <a-entity gltf-model="Airport_02.gltf" position="0 1 0" scale="1 1 1"></a-entity>
+    </a-scene>
 </body>
 </html>
