--- a/valkyrie.html
+++ b/valkyrie.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valkyrie Cockpit</title>
+    <title>JFK Airport 3D</title>
     <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
 </head>
 <body>
     <a-scene>
-        <a-entity gltf-model="Valkyrie_01.gltf" position="0 1 0" scale="1 1 1"></a-entity>
+        <a-entity gltf-model="Valkyrie_02.glb" position="0 1 0" scale="1 1 1"></a-entity>
+        <a-sky color="rgb(186, 255, 255)" src="202.jpg"></a-sky>
     </a-scene>
 </body>
 </html>
