--- a/valkyrie.html
+++ b/valkyrie.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JFK Airport 3D</title>
+    <title>XB-70 Valkyrie</title>
     <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
 </head>
 <body>
