--- a/valkyrie.html
+++ b/valkyrie.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XB-70 Valkyrie</title>
     <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
+    <script src="https://unpkg.com/aframe-orbit-controls@1.3.2/dist/aframe-orbit-controls.min.js"></script>
 </head>
 <body>
     <a-scene>
         <a-entity gltf-model="Valkyrie_02.glb" position="0 1 0" scale="1 1 1"></a-entity>
         <a-sky color="rgb(186, 255, 255)" src="202.jpg"></a-sky>
+        <a-entity camera look-controls="enabled: false" orbit-controls="target: 0 2 0; minDistance: 2; maxDistance: 180; initialPosition: 0 3 5; rotateSpeed: 0.5"></a-entity>
     </a-scene>
 </body>
 </html>
