--- a/valkyrie.html
+++ b/valkyrie.html
@@ -5,13 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XB-70 Valkyrie</title>
     <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
-    <script src="https://unpkg.com/aframe-orbit-controls@1.3.2/dist/aframe-orbit-controls.min.js"></script>
+    <!-- <script src="https://unpkg.com/aframe-orbit-controls@1.3.2/dist/aframe-orbit-controls.min.js"></script> -->
 </head>
 <body>
     <a-scene>
         <a-entity gltf-model="Valkyrie_02.glb" position="0 1 0" scale="1 1 1"></a-entity>
         <a-sky color="rgb(186, 255, 255)" src="202.jpg"></a-sky>
-        <a-entity camera look-controls="enabled: false" orbit-controls="target: 0 -2 0; minDistance: 2; maxDistance: 180; initialPosition: 0 2 0; rotateSpeed: 0.5"></a-entity>
+        <!-- <a-entity camera look-controls position="0 1.6 0" touchEnabled="false"></a-entity> -->
+        <!-- <a-entity camera look-controls="enabled: true" ></a-entity> -->
     </a-scene>
+    <script>
+        AFRAME.components["look-controls"].Component.prototype.onTouchMove = function (t) {
+                    var PI_2 = Math.PI/2,
+                    e,
+                    o = this.el.sceneEl.canvas,
+                    i = this.yawObject,
+                    j = this.pitchObject;
+                    this.touchStarted && this.data.touchEnabled && (e = 2 * Math.PI * (t.touches[0].pageX - this.touchStart.x) / o.clientWidth, f = 2 * Math.PI * (t.touches[0].pageY - this.touchStart.y) / o.clientHeight, j.rotation.x += .3 * f, i.rotation.y += .5 * e, j.rotation.x = Math.max(-PI_2, Math.min(PI_2, j.rotation.x)), this.touchStart = {
+                            x: t.touches[0].pageX,
+                            y: t.touches[0].pageY
+                        })
+                    }
+    </script>
 </body>
 </html>
